# urirun-connector-github

./: .gitignore  LICENSE  Makefile  NOTICE  README.md  local.dev.txt  pyproject.toml
tests/: test_github.py
urirun_connector_github/: __init__.py  connector.manifest.json  contracts.json  core.py
