[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-github"
version = "0.1.0"
description = "GitHub/git connector for ifuri and urirun — clone repos and deploy via bindings/registry anywhere"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = ["urirun>=0.4.14"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
urirun-connector-github = "urirun_connector_github.core:main"

[project.entry-points."urirun.bindings"]
github = "urirun_connector_github.core:urirun_bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_github*"]

[tool.setuptools.package-data]
urirun_connector_github = ["connector.manifest.json", "contracts.json"]
